# rsomics-transcript-fasta

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  codon.rs  fasta_out.rs  genome.rs  gff.rs  iupac.rs  lib.rs  model.rs  splice.rs
tests/: compat.rs
tests/golden/: case_preserve.gff3  ensembl_stopcodon.gtf  ensembl_stopcodon.x.expected  genes.gff3  genes.gtf  genes.w.expected  genes.x.expected  genes.y.expected  genome.fa  multi_parent.gff3  multi_parent.w.expected  multi_parent.x.expected  multi_parent.y.expected  multi_parent_genome.fa  multistop.gff3  multistop.w.expected  multistop.x.expected  multistop.y.expected  multistop.y.star.expected  multistop_genome.fa  no_exon_lines.gff3  no_exon_lines.w.expected  no_exon_lines.y.expected  partial_codon.gff3  partial_codon.x.expected  partial_codon.y.expected  partial_codon_genome.fa  small_genome.fa
