[package]
name = "rsomics-transcript-fasta"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-transcript-fasta"
authors = ["Zane Leong <efd@live.com>"]
description = "Extract spliced transcript/CDS/protein FASTA from a genome + GFF3/GTF gene model — gffread sequence-extraction port"
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["gff", "gtf", "fasta", "transcript", "gffread"]

[[bin]]
name = "rsomics-transcript-fasta"
path = "src/main.rs"

[lib]
name = "rsomics_transcript_fasta"
path = "src/lib.rs"

doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
needletail = "0.6"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
